PR/50547: David Binderman: fix bad sizeof